--- a/Absensi Komsel MW/Main/index.html
+++ b/Absensi Komsel MW/Main/index.html
@@ -90,7 +90,7 @@
             <img src="./image/1750388649897-removebg-preview.png" alt="">
             <img src="./image/Screenshot_20250607-113017-removebg-preview.png" alt="" class="mw">
         </div>
-        <h3>Maked by OSIS HINENI Mulia Wacana School</h3>
+        <h3>Maked by OSIS HINENI Mulia Wacana School</h3><br/><h3>Maker by Samuel Antonius</h3>
         <br/>
         <p>Cabang Cibaduyut : Indonesia, Prov. Jawa Barat, Kab.Bandung, Kec.Dayeuhkolot, Perumahan Taman Cibaduyut Indah, Blok. F, No.232</p>
         <hr style="margin:10px;">
